# XPLR-IOT-1-Time-of-flight-demo

./: .gitignore  README.md
Gateway/: Readme.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
Gateway/child_image/: hci_rpmsg.conf
Gateway/src/: main.c
node-red/: Readme.md  TMF_Dashboard.json
sensor_broadcaster/: CMakeLists.txt  Readme.md  nrf5340dk_nrf5340_cpuapp_rev_b.overlay  nrf5340dk_nrf5340_cpuapp_rev_cd.overlay  prj.conf
sensor_broadcaster/bluetooth_brodcaster/: bt_broadcaster.c  bt_broadcaster.h
sensor_broadcaster/child_image/: hci_rpmsg.conf
sensor_broadcaster/lightranger9_oot_driver/zephyr/: CMakeLists.txt  Kconfig  lightranger9.c  lightranger9.h  module.yml  tof_bin_image.h
sensor_broadcaster/lightranger9_oot_driver/zephyr/dts/bindings/: mikroe,lightranger9.yaml
sensor_broadcaster/src/: main.c
thingstream_flow/: Readme.md
